# auxy

./: .env  .gitignore  Cargo.toml  flake.nix  package-lock.json  package.json
client/: Cargo.toml  app.config.ts  flake.nix  index.html  package-lock.json  package.json  tauri-env.d.ts  tauri.conf.json  tsconfig.json  tsconfig.node.json  vite.config.ts
client/scripts/: gen-component.js  generate-component.js
client/src/: app.tsx  entry-server.tsx  env.d.ts  env.ts  global.css  global.css.ts  index.css.ts  index.ts  index.tsx  lib.rs  main.rs  router.tsx  theme.css.ts
client/src/components/: button.css.ts  button.tsx  cover-art.css.ts  cover-art.tsx  handle.css.ts  handle.tsx  index.ts  label.css.ts  label.tsx  library-object-info.css.ts  library-object-info.tsx  library-object-list.css.ts  library-object-list.tsx  library-object-overlay.css.ts  library-object-overlay.tsx  navigation.css.ts  navigation.tsx  now-playing.css.ts  now-playing.tsx  overflow-menu.css.ts  overflow-menu.tsx  overlay-backdrop.css.ts  overlay-backdrop.tsx  playback-controls.css.ts  playback-controls.tsx  progress-bar.css.ts  progress-bar.tsx  scrollable-list.css.ts  scrollable-list.tsx  search-overlay.css.ts  search-overlay.tsx  session-controls.css.ts  session-controls.tsx  title.css.ts  title.tsx  track-list.css.ts  track-list.tsx  track.css.ts  track.tsx  view.css.ts  (+1 more)
client/src/js/: index.css.ts  index.ts  router.tsx  theme.css.ts  theme.ts
client/src/js/components/: card.tsx  dialog.tsx  index.ts  input.tsx  single-line-input.tsx  surface.css.ts  surface.tsx  test.tsx  text.tsx  view.css.ts  view.tsx
client/src/js/components/button/: button.css.ts  button.tsx  index.ts
client/src/js/components/dialog/: dialog.css.ts  dialog.tsx
client/src/js/components/form/: form.tsx
client/src/js/components/input/: file-input.tsx  index.ts  text-input.tsx
client/src/js/components/surface/: surface.css.ts  surface.tsx
client/src/js/components/text/: text.css.ts  text.tsx
client/src/js/components/view/: view.css.ts  view.tsx
client/src/js/routes/: home.tsx  index.tsx
client/src/js/routes/auth/: index.tsx  sign-in.tsx  sign-up.tsx
client/src/js/services/: auxy.ts  index.ts  provider.tsx
client/src/js/theme/: index.ts  theme.css.ts
client/src/js/theme/themes/: default.css.ts  index.ts
client/src/js/utils/: class-list.ts  generic-optional.ts  get-error-message.ts  index.ts  map-leaf-nodes.ts  passthrough-props.ts  structured-props.ts  use-bg-color.ts  use-form.ts  use-overlay.tsx
client/src/js/utils/css/: index.ts  with-opacity.ts
client/src/rs/: mod.rs
client/src/services/: audio-service.ts  auxy-api-bindings.d.ts  auxy-api-client.ts  index.ts  library-service.ts  spotify.ts
client/src/services/auxy/: index.ts
client/src/utils/: combine-classes.ts  compare-absolute-size.ts  get-background-color.ts  index.ts  use-overlay-manager.ts  use-overlay-manager.tsx  use-session.ts  with-opacity.ts
client/src/views/: auth.tsx  home.tsx  index.ts  index.tsx  library.tsx  player.css.ts  player.tsx  profile.tsx  search.tsx  session.css.ts  session.tsx  theme.css.ts  theme.tsx
client/tauri/: Cargo.toml  tauri.conf.json
core/: Cargo.toml
server/: Cargo.toml
server/client/: generated.ts  index.ts  package-lock.json  package.json  tsconfig.json
server/client/src/: index.ts
server/db/: start.sh
server/db/migrations/: 000.sql
server/migrations/: 20240218225917_users.sql
server/scripts/: dev.sh
server/src/: auth.rs  db.rs  logger.rs  main.rs  public.rs  router.rs
server/src/_old/: auth.rs  spotify_http.rs
server/src/api/: error.rs  mod.rs
server/src/api/routes/: mod.rs
server/src/database/: mod.rs  schema.rs
server/src/db/: auth.rs  error.rs  id.rs  mod.rs  users.rs
server/src/procedures/: auth.rs  mod.rs
server/src/router/: client.rs  mod.rs  state.rs
server/src/router/auth/: mod.rs  sign_in.rs  sign_out.rs  sign_up.rs
server/src/router/middleware/: auth.rs
server/src/router/rest/: mod.rs
server/src/services/: mod.rs  spotify.rs
server/src/utils/: api_result.rs  auth_session.rs  id.rs  mod.rs
(+19 files in other folders)
