[package]
name = "crud_client"
version = "0.0.0"
edition = "2021"

[lib]
name = "crud_client"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.2", features = [] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
