[package]
name = "auxy_server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["http2"] }
axum-extra = { version = "0.9.2", features = [
	"typed-header",
	"cookie",
	"cookie-signed",
	"cookie-key-expansion",
] }
garde = { version = "0.18.0", features = ["full"] }
log = "0.4.20"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
simple_logger = "4.3.3"
specta = { version = "1.0.5", features = ["export", "tokio"] }
time = { version = "0.3.34", features = ["macros", "serde"] }
tokio = { version = "1.36.0", features = ["full"] }
sqlx = { version = "0.7.3", default-features = false, features = [
	"runtime-tokio-native-tls",
	"sqlite",
	"macros",
	"time",
	"migrate",
] }
serde_json = "1.0.114"
mime = "0.3.17"
mime_guess = "2.0.4"
futures = "0.3.30"
tokio-util = { version = "0.7.10", features = ["full"] }
