[package]
name = "auxy"
version = "0.0.0"
license = "MIT"
repository = "github.com/paratym/auxy"
edition = "2021"

[lib]
name = "auxy"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }

[dependencies]
tauri = { version = "2.0.0-alpha.13", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
